Update media queries for mobile and tablet

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -839,7 +839,7 @@
 }
 
 
-/* Media queries mobile tablet and smaller desktop */
+/* Media queries mobile and tablet */
 
 @media (min-width: 523px) and (max-width: 700px) {
   .header {
