--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -416,12 +416,12 @@
   /* margin-top: 2%; */
 }
 
-.webDevBtn {
+.homeButton2 {
   position: relative;
   display: inline-block;
   padding: 13px 40px;
   background: transparent;
-  /* background: #1a1a1a; */
+  /* background: var(--bg-color); */
   color: #fcfdfd;
   font-size: 15px;
   font-weight: 600;
@@ -429,10 +429,11 @@
   border-radius: 2px;
   transition: all 0.5s ease;
   cursor: pointer;
-  left: 70%;
+  left: 75%;
 }
 
-.webDevBtn:hover {
+
+.homeButton2:hover {
   transform: translateX(10px);
   border: 2px solid #fcfdfd;
   background: #fcfdfd;
@@ -515,7 +516,6 @@
   display: inline-block;
   padding: 13px 40px;
   background: transparent;
-  /* background: var(--bg-color); */
   color: #fcfdfd;
   font-size: 15px;
   font-weight: 600;
@@ -540,15 +540,12 @@
   grid-template-columns: repeat(2, 1fr);
   align-items: center;
   top: 19rem;
-  /* gap: 9rem; */
 }
 
 .webAppsImg img {
   position: relative;
   width: 90%;
   height: 600px;
-  /* border-radius: 3px; */
-  /* margin-left: 13%; */
   margin-left: 3%;
 }
 
@@ -562,7 +559,6 @@
   font-size: 22px;
   font-weight: 600;
   color: #fcfd;
-  /* text-transform: uppercase; */
   letter-spacing: 6px;
   margin-bottom: 20px;
   font-family: "Poppins", sans-serif;
@@ -587,20 +583,29 @@
   font-family: 'Open Sans', sans-serif;
 }
 
-.webAppsBtn {
+.homeButton3 {
   position: relative;
   display: inline-block;
-  padding: 10px 15px;
+  padding: 13px 40px;
   background: transparent;
-  color: #c4deb1;
+  color: #fcfdfd;
   font-size: 15px;
   font-weight: 600;
   border: 1px solid #fcfdfd;
-  border-radius: 5px;
+  border-radius: 2px;
   transition: all 0.5s ease;
   cursor: pointer;
-  left: 66%;
+  left: 75%;
 }
+
+
+.homeButton3:hover {
+  transform: translateX(10px);
+  border: 2px solid #fcfdfd;
+  background: #fcfdfd;
+  color: #1a1a1a;
+}
+
 
 .newsletterContent {
   position: relative;
@@ -629,17 +634,7 @@
 }
 
 .newsletterContent form {
-  display: grid;
-  grid-template-columns: 1fr 0.4fr;
-  gap: 1rem;
-}
-
-.newsletterContent form input:first-child {
-  padding: 15px;
-  background: #202020;
-  font-size: 1rem;
-  color: #fcfdfd;
-  border-radius: 5px;
+display: none;
 }
 
 .footer {
@@ -676,6 +671,7 @@
   color: #fcfdfd;
 }
 
+/* footer icons grouped */
 .icon1 {
   display: inline-flex;
   align-items: center;
@@ -686,7 +682,6 @@
   height: 45px;
   width: 45px;
   color: #fcfdfd;
-  /* background: #202020; */
   font-size: 20px;
   margin-right: 8px;
   transition: transform 0.6s;
@@ -703,7 +698,6 @@
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='rgba(255,255,255,1)'%3E%3Cpath d='M12.001 2C6.47598 2 2.00098 6.475 2.00098 12C2.00098 16.425 4.86348 20.1625 8.83848 21.4875C9.33848 21.575 9.52598 21.275 9.52598 21.0125C9.52598 20.775 9.51348 19.9875 9.51348 19.15C7.00098 19.6125 6.35098 18.5375 6.15098 17.975C6.03848 17.6875 5.55098 16.8 5.12598 16.5625C4.77598 16.375 4.27598 15.9125 5.11348 15.9C5.90098 15.8875 6.46348 16.625 6.65098 16.925C7.55098 18.4375 8.98848 18.0125 9.56348 17.75C9.65098 17.1 9.91348 16.6625 10.201 16.4125C7.97598 16.1625 5.65098 15.3 5.65098 11.475C5.65098 10.3875 6.03848 9.4875 6.67598 8.7875C6.57598 8.5375 6.22598 7.5125 6.77598 6.1375C6.77598 6.1375 7.61348 5.875 9.52598 7.1625C10.326 6.9375 11.176 6.825 12.026 6.825C12.876 6.825 13.726 6.9375 14.526 7.1625C16.4385 5.8625 17.276 6.1375 17.276 6.1375C17.826 7.5125 17.476 8.5375 17.376 8.7875C18.0135 9.4875 18.401 10.375 18.401 11.475C18.401 15.3125 16.0635 16.1625 13.8385 16.4125C14.201 16.725 14.5135 17.325 14.5135 18.2625C14.5135 19.6 14.501 20.675 14.501 21.0125C14.501 21.275 14.6885 21.5875 15.1885 21.4875C19.259 20.1133 21.9999 16.2963 22.001 12C22.001 6.475 17.526 2 12.001 2Z'%3E%3C/path%3E%3C/svg%3E");
   height: 45px;
   width: 45px;
-  /* background: #202020; */
   font-size: 20px;
   margin-right: 8px;
   transition: transform 0.6s;
@@ -720,8 +714,6 @@
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='rgba(255,242,242,1)'%3E%3Cpath d='M3.00098 5.47902L10.3778 4.4625V11.5902H3.00098V5.47902ZM3.00098 18.521L10.3778 19.5375V12.4982H3.00098V18.521ZM11.1894 19.646L21.001 21V12.4982H11.1894V19.646ZM11.1894 4.35402V11.5902H21.001V3L11.1894 4.35402Z'%3E%3C/path%3E%3C/svg%3E");
   height: 45px;
   width: 45px;
-  /* color: #874213; */
-  /* background: #202020; */
   font-size: 20px;
   margin-right: 8px;
   transition: transform 0.6s;
@@ -795,6 +787,7 @@
     margin-left: 0;
     left: 5rem;
   }
+
 
   .socials {
     position: relative;
@@ -935,44 +928,6 @@
     left: 12px;
     margin-bottom: 27px;
     /* display: none; */
-  }
-
-  .home {
-    padding: 0;
-    position: relative;
-    margin: 0;
-    margin-top: 2rem;
-    left: -3px;
-    /* top: 1%; */
-  }
-
-  .homeText {
-    max-width: 700px;
-    overflow: hidden;
-    position: relative;
-    left: 16px;
-    top: 11%;
-    margin-top: 2.3rem;
-    white-space: nowrap;
-  }
-
-  .homeText h1 {
-    margin-top: 1rem;
-    font-size: 3rem;
-  }
-
-  .homePara {
-    margin-top: 2rem;
-    font-size: 1.3rem;
-    white-space: pre-wrap;
-  }
-
-  .homeButton {
-    position: relative;
-    padding: 13px 20px;
-    font-size: 14px;
-    left: 75%;
-    border-radius: 3px;
   }
 
   .feature {
@@ -1266,9 +1221,11 @@
   }
 
   .newsletterContent form {
-    grid-template-columns: 1fr;
+    display: none;
   }
 
+
+  /* foooter content section */
   .footer {
     position: relative;
     display: grid;
