--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -38,7 +38,6 @@
   font-weight: 700;
   width: 300px;
   left: 7%;
-
 }
 
 .navbar {
@@ -48,7 +47,6 @@
 .navbar li {
   text-decoration: none;
   list-style: none;
-
 }
 
 .navbar a {
@@ -81,15 +79,12 @@
 .followUs {
   position: relative;
   right: 1rem;
-
 }
 
 .socials a:first-child {
   position: relative;
   color: #fcfdfd;
   font-size: 1rem;
-  /* border: solid 1px #fcfdfd; */
-  /* margin-left: 2rem; */
 }
 
 .socials a {
@@ -105,11 +100,8 @@
   font-size: 20px;
   margin-right: 8px;
   transition: transform 0.6s;
-  /* border: 1px solid #fcfdfd; */
   border-radius: 0;
 }
-
-
 
 .socials a:hover {
   color: #dbee90;
@@ -123,7 +115,6 @@
   background-size: cover;
   background-image: no-repeat;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' width='24' height='24' fill='rgba(250,250,250,1)'%3E%3Cpath d='M4.00098 3H20.001C20.5533 3 21.001 3.44772 21.001 4V20C21.001 20.5523 20.5533 21 20.001 21H4.00098C3.44869 21 3.00098 20.5523 3.00098 20V4C3.00098 3.44772 3.44869 3 4.00098 3ZM5.00098 5V19H19.001V5H5.00098ZM7.50098 9C6.67255 9 6.00098 8.32843 6.00098 7.5C6.00098 6.67157 6.67255 6 7.50098 6C8.3294 6 9.00098 6.67157 9.00098 7.5C9.00098 8.32843 8.3294 9 7.50098 9ZM6.50098 10H8.50098V17.5H6.50098V10ZM12.001 10.4295C12.5854 9.86534 13.2665 9.5 14.001 9.5C16.072 9.5 17.501 11.1789 17.501 13.25V17.5H15.501V13.25C15.501 12.2835 14.7175 11.5 13.751 11.5C12.7845 11.5 12.001 12.2835 12.001 13.25V17.5H10.001V10H12.001V10.4295Z'%3E%3C/path%3E%3C/svg%3E");
-
   height: 35px;
   width: 35px;
   color: #fcfdfd;
@@ -131,7 +122,6 @@
   font-size: 20px;
   margin-right: 8px;
   transition: transform 0.6s;
-  /* border: 1px solid #fcfdfd; */
   border-radius: 0;
 }
 
@@ -144,12 +134,9 @@
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='rgba(255,255,255,1)'%3E%3Cpath d='M12.001 2C6.47598 2 2.00098 6.475 2.00098 12C2.00098 16.425 4.86348 20.1625 8.83848 21.4875C9.33848 21.575 9.52598 21.275 9.52598 21.0125C9.52598 20.775 9.51348 19.9875 9.51348 19.15C7.00098 19.6125 6.35098 18.5375 6.15098 17.975C6.03848 17.6875 5.55098 16.8 5.12598 16.5625C4.77598 16.375 4.27598 15.9125 5.11348 15.9C5.90098 15.8875 6.46348 16.625 6.65098 16.925C7.55098 18.4375 8.98848 18.0125 9.56348 17.75C9.65098 17.1 9.91348 16.6625 10.201 16.4125C7.97598 16.1625 5.65098 15.3 5.65098 11.475C5.65098 10.3875 6.03848 9.4875 6.67598 8.7875C6.57598 8.5375 6.22598 7.5125 6.77598 6.1375C6.77598 6.1375 7.61348 5.875 9.52598 7.1625C10.326 6.9375 11.176 6.825 12.026 6.825C12.876 6.825 13.726 6.9375 14.526 7.1625C16.4385 5.8625 17.276 6.1375 17.276 6.1375C17.826 7.5125 17.476 8.5375 17.376 8.7875C18.0135 9.4875 18.401 10.375 18.401 11.475C18.401 15.3125 16.0635 16.1625 13.8385 16.4125C14.201 16.725 14.5135 17.325 14.5135 18.2625C14.5135 19.6 14.501 20.675 14.501 21.0125C14.501 21.275 14.6885 21.5875 15.1885 21.4875C19.259 20.1133 21.9999 16.2963 22.001 12C22.001 6.475 17.526 2 12.001 2Z'%3E%3C/path%3E%3C/svg%3E");
   height: 35px;
   width: 35px;
-  /* color: #874213; */
-  /* background: #202020; */
   font-size: 20px;
   margin-right: 8px;
   transition: transform 0.6s;
-  /* border: 1px solid #fcfdfd; */
   border-radius: 0;
 }
 
@@ -162,18 +149,14 @@
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='rgba(255,255,255,1)'%3E%3Cpath d='M11.501 3V11.5H3.00098V3H11.501ZM11.501 21H3.00098V12.5H11.501V21ZM12.501 3H21.001V11.5H12.501V3ZM21.001 12.5V21H12.501V12.5H21.001Z'%3E%3C/path%3E%3C/svg%3E");
   height: 35px;
   width: 35px;
-  /* color: #874213; */
-  /* background: #202020; */
   font-size: 20px;
   margin-right: 8px;
   transition: transform 0.6s;
-  /* border: 1px solid #fcfdfd; */
   border-radius: 0;
 }
 
 .menu {
   cursor: pointer;
-  /* display: none; */
   z-index: 10001;
   position: relative;
   display: inline-flex;
@@ -197,7 +180,6 @@
   margin-top: 32px;
   position: relative;
   height: 100vh;
-  /* width: 100%; */
   background-size: cover;
   background-position: bottom;
   display: flex;
@@ -209,9 +191,7 @@
   position: absolute;
   top: 4rem;
   font-size: 1.5rem;
-  font-weight: 600;
   margin-bottom: 10px;
-  /* text-transform: uppercase; */
   letter-spacing: 6px;
   color: #fcfd;
   font-family: "Poppins", sans-serif;
@@ -286,14 +266,24 @@
 }
 
 /* Feature section */
+.techStack {
+  position: relative;
+  max-width: 100%;
+  top: 3.5rem;
+  left: 42%;
+  font-size: 2rem;
+  color: #b1b5b5;
+  /* transform: translateX(-50%); */
+}
+
 .featureContent {
   position: relative;
   top: 8rem;
-  left: 0.9rem;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(150px, auto));
   align-items: center;
   text-align: center;
+  justify-content: center;
   gap: 3rem;
   margin: 0 1rem 0 1rem;
 }
@@ -311,27 +301,16 @@
 
 .rowImg img {
   position: relative;
-  /* margin-left: 1rem; */
-  width: 170px;
+  width: 150px;
   height: 90px;
   display: block;
   transition: transform 0.7s;
 }
 
-.techStack {
-  position: relative;
-  max-width: 100%;
-  top: 3.5rem;
-  left: 42%;
-  font-size: 2rem;
-  color: #b1b5b5;
-  /* transform: translateX(-50%); */
-}
-
 .featureContent h4 {
   color: rgb(193, 193, 193);
   position: relative;
-  right: 2.5rem;
+  justify-content: center;
 }
 
 .featureContent h4:hover {
@@ -365,28 +344,22 @@
   grid-template-columns: repeat(2, 1fr);
   align-items: center;
   gap: 9rem;
-
-
 }
 
 .developerText {
   position: relative;
   margin-right: 2rem;
-  /* top: 1rem; */
   top: 2rem;
 }
 
-
 .developerText h5 {
   font-size: 22px;
-  font-weight: 600;
-  /* text-transform: uppercase; */
+  color: #fcfd;
   letter-spacing: 6px;
   margin-bottom: 20px;
   font-family: "Poppins", sans-serif;
   font-weight: 500;
   font-style: normal;
-  color: #fcfd;
 }
 
 .developerText h1 {
@@ -431,7 +404,6 @@
   cursor: pointer;
   left: 75%;
 }
-
 
 .homeButton2:hover {
   transform: translateX(10px);
@@ -598,14 +570,12 @@
   left: 75%;
 }
 
-
 .homeButton3:hover {
   transform: translateX(10px);
   border: 2px solid #fcfdfd;
   background: #fcfdfd;
   color: #1a1a1a;
 }
-
 
 .newsletterContent {
   position: relative;
@@ -634,7 +604,7 @@
 }
 
 .newsletterContent form {
-display: none;
+  display: none;
 }
 
 .footer {
@@ -663,7 +633,6 @@ display: none;
   margin-bottom: 0.8rem;
   transition: all 0.5s ease;
   font-family: 'Open Sans', sans-serif;
-
 }
 
 .footerBox a:hover {
@@ -719,12 +688,6 @@ display: none;
   transition: transform 0.6s;
   border: 1px solid #fcfdfd;
   border-radius: 0;
-}
-
-.icon1 :hover {
-  color: #fcfd;
-  transform: translateY(-3px);
-
 }
 
 .copyright {
@@ -1114,7 +1077,7 @@ display: none;
     color: #1a1a1a;
   }
 
-/* web and cloud developer section */
+  /* web and cloud developer section */
   .webAppsSection {
     position: relative;
     /* display: grid;
