--- a/src/app/ux-design/page.module.css
+++ b/src/app/ux-design/page.module.css
@@ -306,7 +306,7 @@
   position: relative;
   /* margin-left: 2rem; */
   width: 150px;
-  height: 90px;
+  height: 70px;
   display: block;
   transition: transform 0.7s;
 }
@@ -386,11 +386,12 @@
 
 .developerImg img {
   position: relative;
-  background-size: contain;
+  background-size: auto;
   width: 100%;
   height: 600px;
   border-radius: 3px;
   margin-left: 13%;
+  border: 1px solid #5b5b5b;
   /* margin-top: 2%; */
 }
 
@@ -524,6 +525,9 @@
   width: 90%;
   height: 600px;
   margin-left: 3%;
+  border-radius: 3px;
+  border: 1px solid #5b5b5b;
+  background-size: auto;
 }
 
 .webAppsText {
