--- a/src/app/web-design/page.module.css
+++ b/src/app/web-design/page.module.css
@@ -205,7 +205,6 @@
   font-weight: 800;
   line-height: 1.2;
   margin-bottom: 20px;
-  color: #fcfdfd;
 }
 
 .homeText h1 {
@@ -238,7 +237,7 @@
   font-family: 'Open Sans', sans-serif;
   font-weight: 500;
   line-height: 30px;
-  color: #a3cfcf;
+  color: #fcfdfd;
   margin-bottom: 35px;
 }
 
@@ -303,7 +302,7 @@
 .rowImg img {
   position: relative;
   width: 150px;
-  height: 90px;
+  height: 70px;
   display: block;
   transition: transform 0.7s;
 }
@@ -385,7 +384,8 @@
   position: relative;
   width: 100%;
   height: 600px;
-  /* border-radius: 3px; */
+  border-radius: 3px;
+  border: 1px solid #606060;
   margin-left: 13%;
   /* margin-top: 2%; */
 }
@@ -520,6 +520,8 @@
   width: 90%;
   height: 600px;
   margin-left: 3%;
+  border-radius: 3px;
+  border: 1px solid #5c5f5f;
 }
 
 .webAppsText {
