--- a/src/app/web-development/page.module.css
+++ b/src/app/web-development/page.module.css
@@ -320,7 +320,7 @@
   position: relative;
   /* margin-left: 2rem; */
   width: 150px;
-  height: 90px;
+  height: 70px;
   display: block;
   transition: transform 0.7s;
 }
@@ -401,9 +401,9 @@
   position: relative;
   width: 100%;
   height: 600px;
-  /* border-radius: 3px; */
+  border-radius: 3px;
   margin-left: 13%;
-  /* margin-top: 2%; */
+  border: 1px solid #5c5f5f;
 }
 
 .homeButton2 {
@@ -537,8 +537,8 @@
   position: relative;
   width: 90%;
   height: 600px;
-  /* border-radius: 3px; */
-  /* margin-left: 13%; */
+  border-radius: 3px;
+  border: 1px solid #5c5f5f;
   margin-left: 3%;
 }
 
