--- a/src/app/about-us/page.module.css
+++ b/src/app/about-us/page.module.css
@@ -22,12 +22,12 @@
   width: 100vw;
   height: 80px;
   background: transparent;
+  border-bottom: 1px solid #5a5a5a;
   /* padding: 27px 17%; */
   display: flex;
   align-items: center;
   justify-content: space-between;
   transition: all 0.5s ease;
-  background: transparent;
   backdrop-filter: blur(35px);
 }
 
@@ -176,7 +176,7 @@
 
 /* Home section */
 .home {
-  padding: 70px 17% 60px;
+  padding: 90px 13% 60px;
   /* margin-top: 32px; */
   position: relative;
   height: 100vh;
