--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -22,6 +22,7 @@
   width: 100vw;
   height: 80px;
   background: transparent;
+  border-bottom: 1px solid #5a5a5a;
   /* padding: 27px 17%; */
   display: flex;
   align-items: center;
@@ -179,6 +180,7 @@
   padding: 70px 17% 60px;
   margin-top: 32px;
   position: relative;
+  top: 1rem;
   height: 100vh;
   background-size: cover;
   background-position: bottom;
@@ -527,7 +529,7 @@
 .webAppsText {
   position: relative;
   margin-left: 1rem;
-  top: 2rem;
+  /* top: 2rem; */
 }
 
 .webAppsText h5 {
@@ -550,6 +552,7 @@
 }
 
 .webAppsText p {
+  max-width: 650px;
   font-size: 1rem;
   font-weight: 500;
   line-height: 30px;
