--- a/src/app/ux-design/page.module.css
+++ b/src/app/ux-design/page.module.css
@@ -22,6 +22,7 @@
   width: 100vw;
   height: 80px;
   background: transparent;
+  border-bottom: 1px solid #5a5a5a;
   /* padding: 27px 17%; */
   display: flex;
   align-items: center;
@@ -182,6 +183,7 @@
   padding: 70px 17% 60px;
   margin-top: 32px;
   position: relative;
+  top: 1rem;
   height: 100vh;
   background-size: cover;
   background-position: bottom;
@@ -391,7 +393,7 @@
   height: 600px;
   border-radius: 3px;
   margin-left: 13%;
-  border: 1px solid #5b5b5b;
+  border: 1px solid #5c5f5f;
   /* margin-top: 2%; */
 }
 
@@ -526,7 +528,7 @@
   height: 600px;
   margin-left: 3%;
   border-radius: 3px;
-  border: 1px solid #5b5b5b;
+  border: 1px solid #5c5f5f;
   background-size: auto;
 }
 
