--- a/src/app/web-design/page.module.css
+++ b/src/app/web-design/page.module.css
@@ -22,6 +22,7 @@
   width: 100vw;
   height: 80px;
   background: transparent;
+  border-bottom: 1px solid #5a5a5a;
   /* padding: 27px 17%; */
   display: flex;
   align-items: center;
@@ -180,6 +181,7 @@
   padding: 70px 17% 60px;
   margin-top: 32px;
   position: relative;
+  top: 1rem;
   height: 100vh;
   background-size: cover;
   background-position: bottom;
@@ -385,7 +387,7 @@
   width: 100%;
   height: 600px;
   border-radius: 3px;
-  border: 1px solid #606060;
+  border: 1px solid #5c5f5f;
   margin-left: 13%;
   /* margin-top: 2%; */
 }
