--- a/src/app/web-development/page.module.css
+++ b/src/app/web-development/page.module.css
@@ -193,6 +193,7 @@
   padding: 70px 17% 60px;
   margin-top: 32px;
   position: relative;
+  top: 1rem;
   height: 100vh;
   /* width: 100%; */
   background-size: cover;
