--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1756,6 +1756,14 @@
 }
 
 @media (max-width: 375px) {
+  .main {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+    padding: 0;
+    height: 5000px;
+  }
 
   .header {
     position: fixed;
@@ -1803,6 +1811,7 @@
   .followUs {
 
     right: 1rem;
+    font-size: 0.2em;
   }
 
   .socials a:first-child {
@@ -2228,9 +2237,11 @@
 
   .main {
     position: relative;
+    display: flex;
+    flex-direction: column;
     margin: 0;
     padding: 0;
-    height: 100%;
+    height: 5000px;
   }
 
   .header {
@@ -2359,7 +2370,7 @@
     padding: 0;
     position: relative;
     margin-right: 0;
-    margin-top: 2rem;
+    margin-top: 0;
   }
 
   .homeText {
@@ -2367,26 +2378,28 @@
     overflow: hidden;
     position: relative;
     left: 10px;
-    top: 5%;
+    top: 2%;
     margin: -1rem 0.2rem 0 0.2rem;
     /* white-space: nowrap; */
   }
 
   .homeText h5 {
     font-size: 1rem;
+    top: 0;
   }
 
   .homeText h1 {
-    margin-top: 1rem;
+    position: relative;
+    top: 0.9rem;
     font-size: 1.4rem;
     color: #fcfdfd;
   }
 
   .homePara {
-    margin-top: 1rem;
+    margin-top: 1.2rem;
     /* font-size: 0.8rem; */
     white-space: pre-wrap;
-    font-size: 19px;
+    font-size: 18px;
   }
 
   .homeButton {
@@ -2439,12 +2452,12 @@
 
   .firstImage {
     position: relative;
-    display: flex;
+    display: block;
     background-size: cover;
     background-repeat: no-repeat;
     justify-content: center;
     max-width: 300px;
-    height: 250px;
+    height: 200px;
     border-radius: 3px;
     top: 1.5rem;
     left: 10px;
@@ -2460,6 +2473,7 @@
     padding: 0;
     position: relative;
     margin: 0;
+    top: -19px;
     /* margin-top: 2rem; */
     /* top: -2rem; */
     width: 320px;
@@ -2486,21 +2500,22 @@
     width: 300px;
     margin-top: -0.8rem;
     white-space: pre-wrap;
-    font-size: 19px;
+    font-size: 18px;
   }
 
-  .webDevBtn {
+  .homeButton2 {
     position: relative;
     padding: 5px 10px;
     font-size: 14px;
     left: 64%;
+    bottom: 28px;
     border-radius: 3px;
   }
 
   .tour {
     position: relative;
     max-width: 320px;
-    top: 4rem;
+    top: 0;
   }
 
   .centerText {
@@ -2577,7 +2592,9 @@
     border-radius: 3px;
     transition: all 0.5s ease;
     cursor: pointer;
-    left: 0%;
+    left: 51%;
+    transform: translate(-50%);
+    bottom: 8px;
   }
 
 
@@ -2590,7 +2607,7 @@
     max-width: 300px;
     max-height: 250px;
     border-radius: 3px;
-    top: -1rem;
+    top: -6rem;
     left: 10px;
   }
 
@@ -2600,7 +2617,7 @@
     position: relative;
     margin: 0;
     max-width: 320px;
-    top: -4rem;
+    top: -13rem;
 
   }
 
@@ -2611,7 +2628,7 @@
   .webAppsText {
     /* position: relative; */
     max-width: 320px;
-    left: 16px;
+    left: 10px;
     top: 7.5rem;
     margin: 0;
     /* white-space: nowrap; */
@@ -2636,12 +2653,12 @@
     /* line-height: 30px; */
     color: #fcfdfd;
     margin-bottom: 35px;
-    font-size: 19px;
+    font-size: 18px;
     max-width: 300px;
     /* white-space: pre-wrap; */
   }
 
-  .webAppsBtn {
+  .homeButton3 {
     position: relative;
     display: inline-block;
     background: transparent;
@@ -2653,6 +2670,7 @@
     padding: 5px 10px;
     font-size: 14px;
     left: 61%;
+    bottom: 22px;
     border-radius: 3px;
   }
 
@@ -2660,7 +2678,7 @@
     grid-template-columns: 1fr;
     gap: 2rem;
     left: -29px;
-    top: 3rem;
+    top: -3rem;
   }
 
   .newsletterText h2 {
@@ -2677,7 +2695,7 @@
     grid-template-columns: repeat(auto-fit, minmax(200px, auto));
     gap: 2rem;
     left: 10px;
-    top: 8rem;
+    top: 1rem;
   }
 
   .servicesContent {
@@ -2695,6 +2713,6 @@
   .copyright p {
     position: relative;
     font-size: 16px;
-    bottom: -0.5rem;
+    top: -32rem;
   }
 }
