--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1264,7 +1264,7 @@
   .socials {
     /* margin-left: 12rem; */
     position: relative;
-    left: 24%;
+    left: 4.57rem;
     display: flex;
     align-items: center;
     white-space: nowrap;
@@ -1333,7 +1333,7 @@
     cursor: pointer;
     /* display: none; */
     z-index: 10001;
-    position: relative;
+    position: absolute;
     display: inline-flex;
     align-items: center;
     justify-content: center;
@@ -1343,7 +1343,7 @@
     color: #fcfdfd;
     height: 25px;
     width: 25px;
-    margin-left: -1.5rem;
+    left: 18.5rem;
     margin-top: 15px;
     /* right: 1rem; */
     margin-bottom: 35px;
@@ -1355,7 +1355,7 @@
     padding: 22px 2% 0px;
     position: relative;
     margin: 0;
-    margin-top: 3rem;
+    margin-top: 7rem;
   }
 
   .homeText {
@@ -1749,7 +1749,7 @@
   .socials {
     /* margin-left: 12rem; */
     position: relative;
-    left: 16%;
+    left: 24.5%;
     display: flex;
     align-items: center;
     white-space: nowrap;
@@ -1818,7 +1818,7 @@
     cursor: pointer;
     /* display: none; */
     z-index: 10001;
-    position: relative;
+    position: fixed;
     display: inline-flex;
     align-items: center;
     justify-content: center;
@@ -1840,7 +1840,7 @@
     padding: 0;
     position: relative;
     margin: 0;
-    margin-top: 3rem;
+    margin-top: 7rem;
   }
 
   .homeText {
@@ -2204,7 +2204,7 @@
     top: 0;
     right: 0;
     z-index: 1000;
-    width: 100vw;
+    max-width: 100vw;
     height: 50px;
     background: transparent;
     /* padding: 27px 17%; */
@@ -2304,7 +2304,7 @@
     cursor: pointer;
     /* display: none; */
     z-index: 10001;
-    position: relative;
+    position: absolute;
     display: inline-flex;
     align-items: center;
     justify-content: center;
@@ -2314,8 +2314,8 @@
     color: #fcfdfd;
     height: 20px;
     width: 20px;
-    margin-left: -3rem;
-    margin-top: 24px;
+    margin-left: -3.7rem;
+    margin-top: 12px;
     /* right: -1rem; */
     margin-bottom: 35px;
     /* display: none; */
@@ -2326,7 +2326,7 @@
     padding: 0;
     position: relative;
     margin-right: 0;
-    top: 110px;
+    top: 2rem;
   }
 
   .homeText {
